# pii_guard

./: .gitignore  README.md  pyproject.toml
benchmarks/: __init__.py  compare_ner_backends.py  korean_ner_benchmark.py
docs/: DESIGN.md  PII_GUARD_REPORT_v0.1.0_2026-06-26.md  SESSION_HANDOFF.md  pii-guard-requirements.md
docs/delta/: completed_round1.yaml
docs/design/: PROXIMITY_DESIGN.md
pii_guard/: __init__.py  __main__.py  boundary.py  categories.py  cli.py  decision.py  detector.py  engine.py  launcher.py  ledger.py  masker.py  models.py  pf_manager.py  pinlist_approval.py  pinlist_guard.py  policy.py  proximity.py  proxy.py  response_rehydrator.py  session_map.py  streaming_buffer.py  streaming_rehydrator.py  tripwire.py  updater.py  vault.py
pii_guard/corpus/: __init__.py  korean_pii.py  ner_benchmark_corpus.py
pii_guard/providers/: __init__.py  claude.py  claude_parser.py  coverage_alarm.py  gemini.py  gemini_parser.py  openai.py  openai_parser.py  schema_coverage.py
pii_guard/stage2/: __init__.py  _workers.py  backend.py  gliner_ner.py  korean_ner.py  ner_filters.py  nunerzero_ner.py  policy_layer.py  runner.py
scripts/: e2e_smoke.py
tests/: test_boundary.py  test_categories.py  test_claude_parser.py  test_claude_wire.py  test_compare_ner_backends.py  test_coverage_alarm.py  test_crash_fail_closed.py  test_decision_engine.py  test_egress_lockdown_integration.py  test_fail_closed.py  test_gemini_parser.py  test_gemini_wire.py  test_ip_hostname.py  test_korean_pii_corpus.py  test_korean_pii_regression.py  test_launcher.py  test_ledger.py  test_log_masked.py  test_masker.py  test_ner_backend.py  test_ner_benchmark.py  test_ner_filters.py  test_openai_parser.py  test_openai_wire.py  test_pf_manager.py  test_pinlist_approval.py  test_pinlist_guard.py  test_pipeline_integration.py  test_policy.py  test_policy_watcher.py  test_proximity.py  test_proximity_policy.py  test_response_rehydration.py  test_rule_update_regression_guard.py  test_schema_coverage.py  test_serve_ner_wiring.py  test_session_map.py  test_signed_updates.py  test_stage2_degradation.py  test_stage2_korean_ner.py  (+6 more)
training/: .gitignore  README.md  __init__.py  augment.py  common.py  eval.py  ingest.py  schema.md  split.py  train.py
training/sample/: raw_sample.jsonl
ui/: app.py  scanner.py
validation/: EFFICACY_BEFORE_AFTER.md  EFFICACY_REPORT.md  EXTERNAL_LLM_TEST_2026-06-23.md  EXTERNAL_LLM_TEST_2026-06-23_claude_GLiNER.md  EXTERNAL_LLM_TEST_2026-06-23_claude_NuNERZero.md  EXTERNAL_LLM_TEST_2026-06-23_claude_spaCy.md  EXTERNAL_LLM_TEST_2026-06-23_codex_GLiNER.md  EXTERNAL_LLM_TEST_2026-06-23_codex_NuNERZero.md  EXTERNAL_LLM_TEST_2026-06-23_codex_spaCy.md  EXTERNAL_LLM_TEST_2026-06-23_gemini.md  EXTERNAL_LLM_TEST_2026-06-23_gemini_GLiNER.md  EXTERNAL_LLM_TEST_2026-06-23_gemini_NuNERZero.md  EXTERNAL_LLM_TEST_2026-06-23_gemini_spaCy.md  EXTERNAL_TEST_PROMPT.md  NER_BACKEND_COMPARISON.md  NER_BACKEND_COMPARISON_nunerzero.md  NUNERZERO_TEST_2026-06-29.md  STAGE1_RECALL_IMPROVEMENT_2026-06-25.md  VOC_SERVER_REPORT.md  _calibrate.py  _summary.json  compare_report.py  efficacy_test.py  efficacy_test_log.txt  external_cases_reconstructed.json  external_replay.py  external_replay_claude_gliner.json  external_replay_claude_nunerzero.json  external_replay_codex_gliner.json  external_replay_codex_nunerzero.json  external_replay_gemini_gliner.json  external_replay_gemini_nunerzero.json  gliner_benchmark.json  gliner_smoke.py  load_external_test.py  ner_corpus_gliner_0.35.json  ner_corpus_gliner_0.50.json  ner_corpus_gliner_spf5_0.50.json  ner_corpus_nunerzero_0.35.json  ner_corpus_nunerzero_0.50.json  (+5 more)
