[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pii-guard"
version = "0.1.0"
description = "Local-first PII and secret detection/redaction engine for LLM gateway proxy"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
piiguard = "pii_guard.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
# Stage-2 NER backend "spacy" (lightweight fallback): Presidio + Korean spaCy model.
# Install with: pip install pii-guard[ner]
# Then download a Korean model. ko_core_news_lg is preferred (better PERSON/ORG
# recall); ko_core_news_sm is a lighter fallback. Model selection is automatic
# (lg preferred when installed) and overridable via PIIGUARD_KO_SPACY_MODEL.
#   python -m spacy download ko_core_news_lg   # preferred
#   python -m spacy download ko_core_news_sm   # lightweight fallback
ner = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
]
# Stage-2 NER backend "gliner" (default, recall-first): GLiNER + PyTorch.
# Install with: pip install pii-guard[ner-gliner]
# Korean-specific model is downloaded on first use; default taeminlee/gliner_ko,
# overridable via PIIGUARD_GLINER_MODEL. Select the backend with
# PIIGUARD_NER_BACKEND=gliner|spacy or policy stage2.ner_backend (R18 / ADR-11).
ner-gliner = [
    "gliner>=0.2",
    "torch>=2.0",
]
# Interactive Streamlit UI (ui/app.py): chat + multi-file PII scan with console output.
# Run with: streamlit run ui/app.py
ui = [
    "streamlit>=1.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: live pf(4) + network integration tests — require root and real network (run with: sudo pytest -m integration)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pii_guard*"]
